--- a/package.json
+++ b/package.json
@@ -12,35 +12,30 @@
     "dist",
     "src"
   ],
-  "main": "src/js/modules/zen-text-field.js",
+  "main": "src/js/zen-text-field.js",
   "bugs": {
     "url": "https://github.com/ux-ui-pro/zen-text-field/issues"
   },
   "type": "module",
   "scripts": {
-    "dev": "gulp",
-    "build": "gulp build --build",
-    "deploy": "gulp deploy --build"
+    "serve": "gulp",
+    "build": "gulp build --build"
   },
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-file-include": "^2.3.0",
-    "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-if": "^3.0.0",
-    "gulp-newer": "^1.4.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-rewrite": "^5.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-util": "^3.0.8",
     "gulp-version-number": "^0.2.4",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.49.8",
     "webpack": "^5.69.1",
     "webpack-stream": "^7.0.0"
